// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddTask Default 1`] = `
<form
  className="css-1fta312-AddTask"
  onSubmit={[Function]}
>
  <input
    className="css-d6ea14-AddTask"
    id="addTaskField"
    name="addTaskField"
    onChange={[Function]}
    placeholder="Create a new todo..."
    type="text"
    value=""
  />
  <button
    className="css-15q4c59-AddTask"
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Storyshots App default 1`] = `
<div
  className="css-wg12y0-App"
>
  <div
    className="css-74mi4m-Layout"
  >
    <div
      className="css-16ruusw-Background"
    />
    <div
      className="css-1rvljrh"
    >
      <header
        className="css-1nivo21-Header"
      >
        <div
          className="css-1ncoyeb-Header"
        >
          Todo
        </div>
        <button
          className="css-1iv0i2e-Header"
        >
          <svg>
            icon-moon.svg
          </svg>
        </button>
      </header>
      <form
        className="css-1fta312-AddTask"
        onSubmit={[Function]}
      >
        <input
          className="css-d6ea14-AddTask"
          id="addTaskField"
          name="addTaskField"
          onChange={[Function]}
          placeholder="Create a new todo..."
          type="text"
          value=""
        />
        <button
          className="css-15q4c59-AddTask"
          type="submit"
        >
          Submit
        </button>
      </form>
      <ul
        className="css-1gb0t1m-TaskList"
      >
        <li>
          <div
            className="css-ercgj5-Task"
          >
            <input
              checked={false}
              id={0}
              name="Complete online JavaScript course"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="css-1rezjdg-Task"
              htmlFor={0}
            >
              <span
                className="css-dyng2g-Task"
              />
              Complete online JavaScript course
            </label>
            <button
              className="css-1819f9w-Task"
              onClick={[Function]}
            >
              <svg>
                icon-cross.svg
              </svg>
            </button>
          </div>
        </li>
        <li>
          <div
            className="css-ercgj5-Task"
          >
            <input
              checked={false}
              id={1}
              name="Jog around the park 3x"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="css-1rezjdg-Task"
              htmlFor={1}
            >
              <span
                className="css-dyng2g-Task"
              />
              Jog around the park 3x
            </label>
            <button
              className="css-1819f9w-Task"
              onClick={[Function]}
            >
              <svg>
                icon-cross.svg
              </svg>
            </button>
          </div>
        </li>
        <li>
          <div
            className="css-ercgj5-Task"
          >
            <input
              checked={false}
              id={2}
              name="10 minutes meditation"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="css-1rezjdg-Task"
              htmlFor={2}
            >
              <span
                className="css-dyng2g-Task"
              />
              10 minutes meditation
            </label>
            <button
              className="css-1819f9w-Task"
              onClick={[Function]}
            >
              <svg>
                icon-cross.svg
              </svg>
            </button>
          </div>
        </li>
        <li>
          <div
            className="css-ercgj5-Task"
          >
            <input
              checked={false}
              id={3}
              name="Read for 1 hour"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="css-1rezjdg-Task"
              htmlFor={3}
            >
              <span
                className="css-dyng2g-Task"
              />
              Read for 1 hour
            </label>
            <button
              className="css-1819f9w-Task"
              onClick={[Function]}
            >
              <svg>
                icon-cross.svg
              </svg>
            </button>
          </div>
        </li>
        <li>
          <div
            className="css-ercgj5-Task"
          >
            <input
              checked={false}
              id={4}
              name="Pick up groceries"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="css-1rezjdg-Task"
              htmlFor={4}
            >
              <span
                className="css-dyng2g-Task"
              />
              Pick up groceries
            </label>
            <button
              className="css-1819f9w-Task"
              onClick={[Function]}
            >
              <svg>
                icon-cross.svg
              </svg>
            </button>
          </div>
        </li>
        <li>
          <div
            className="css-ercgj5-Task"
          >
            <input
              checked={false}
              id={5}
              name="Complete Todo App on Frontend Mentor"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="css-1rezjdg-Task"
              htmlFor={5}
            >
              <span
                className="css-dyng2g-Task"
              />
              Complete Todo App on Frontend Mentor
            </label>
            <button
              className="css-1819f9w-Task"
              onClick={[Function]}
            >
              <svg>
                icon-cross.svg
              </svg>
            </button>
          </div>
        </li>
        <div
          className="css-rwvome-TaskFilters"
        >
          <span
            className="css-1e1wj4i-TaskFilters"
          >
            6 items left
          </span>
          <div
            className="css-1h6i0ou-TaskFilters"
          >
            <button
              className="css-1qqd672-TaskFilters"
              onClick={[Function]}
            >
              All
            </button>
            <button
              className="css-v69h9x-TaskFilters"
              onClick={[Function]}
            >
              Active
            </button>
            <button
              className="css-v69h9x-TaskFilters"
              onClick={[Function]}
            >
              Completed
            </button>
          </div>
          <button
            className="css-1e1bs95-TaskFilters"
            onClick={[Function]}
          >
            Clear Completed
          </button>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots Background Default 1`] = `
<div
  className="css-16ruusw-Background"
/>
`;

exports[`Storyshots Header Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
>
  <header
    className="css-1nivo21-Header"
  >
    <div
      className="css-1ncoyeb-Header"
    >
      Todo
    </div>
    <button
      className="css-1iv0i2e-Header"
    >
      <svg>
        icon-moon.svg
      </svg>
    </button>
  </header>
</div>
`;

exports[`Storyshots Layout Default 1`] = `
<div
  className="css-74mi4m-Layout"
>
  <div
    className="css-16ruusw-Background"
  />
  <div
    className="css-1rvljrh"
  />
</div>
`;

exports[`Storyshots Task Completed 1`] = `
<div
  className="css-ercgj5-Task"
>
  <input
    checked={true}
    id={1}
    name="Todo"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1rezjdg-Task"
    htmlFor={1}
  >
    <span
      className="css-dyng2g-Task"
    />
    Todo
  </label>
  <button
    className="css-1819f9w-Task"
    onClick={[Function]}
  >
    <svg>
      icon-cross.svg
    </svg>
  </button>
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="css-ercgj5-Task"
>
  <input
    checked={false}
    id={0}
    name="Todo"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="css-1rezjdg-Task"
    htmlFor={0}
  >
    <span
      className="css-dyng2g-Task"
    />
    Todo
  </label>
  <button
    className="css-1819f9w-Task"
    onClick={[Function]}
  >
    <svg>
      icon-cross.svg
    </svg>
  </button>
</div>
`;

exports[`Storyshots TaskFilters Default 1`] = `
<div
  className="css-rwvome-TaskFilters"
>
  <span
    className="css-1e1wj4i-TaskFilters"
  >
    1 item left
  </span>
  <div
    className="css-1h6i0ou-TaskFilters"
  >
    <button
      className="css-1qqd672-TaskFilters"
      onClick={[Function]}
    >
      All
    </button>
    <button
      className="css-v69h9x-TaskFilters"
      onClick={[Function]}
    >
      Active
    </button>
    <button
      className="css-v69h9x-TaskFilters"
      onClick={[Function]}
    >
      Completed
    </button>
  </div>
  <button
    className="css-1e1bs95-TaskFilters"
    onClick={[Function]}
  >
    Clear Completed
  </button>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<ul
  className="css-1gb0t1m-TaskList"
>
  <li>
    <div
      className="css-ercgj5-Task"
    >
      <input
        checked={false}
        id={0}
        name="Todo1"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="css-1rezjdg-Task"
        htmlFor={0}
      >
        <span
          className="css-dyng2g-Task"
        />
        Todo1
      </label>
      <button
        className="css-1819f9w-Task"
        onClick={[Function]}
      >
        <svg>
          icon-cross.svg
        </svg>
      </button>
    </div>
  </li>
  <li>
    <div
      className="css-ercgj5-Task"
    >
      <input
        checked={true}
        id={1}
        name="Todo2"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="css-1rezjdg-Task"
        htmlFor={1}
      >
        <span
          className="css-dyng2g-Task"
        />
        Todo2
      </label>
      <button
        className="css-1819f9w-Task"
        onClick={[Function]}
      >
        <svg>
          icon-cross.svg
        </svg>
      </button>
    </div>
  </li>
  <div
    className="css-rwvome-TaskFilters"
  >
    <span
      className="css-1e1wj4i-TaskFilters"
    >
      1 item left
    </span>
    <div
      className="css-1h6i0ou-TaskFilters"
    >
      <button
        className="css-1qqd672-TaskFilters"
        onClick={[Function]}
      >
        All
      </button>
      <button
        className="css-v69h9x-TaskFilters"
        onClick={[Function]}
      >
        Active
      </button>
      <button
        className="css-v69h9x-TaskFilters"
        onClick={[Function]}
      >
        Completed
      </button>
    </div>
    <button
      className="css-1e1bs95-TaskFilters"
      onClick={[Function]}
    >
      Clear Completed
    </button>
  </div>
</ul>
`;
